tools/tests/errors/surf_exc_16.ki
# a range with a huge span is guarded (raises, not OOM)
discard range(0, 10000000000)
